--- a/server/views/partials/header.html
+++ b/server/views/partials/header.html
@@ -32,7 +32,7 @@
                     <li class="moj-header__navigation-item">
                         {{ user.displayName }}
                     </li>
-                    {% if not hideCourtLink %}}
+                    {% if not hideCourtLink %}
                     <li class="moj-header__navigation-item">
                         <a class="moj-header__navigation-link pac-sign-out-link" href="/my-courts">My courts</a>
                     </li>
