--- a/server/views/cookies-policy.njk
+++ b/server/views/cookies-policy.njk
@@ -4,7 +4,7 @@
 {% set title = "Cookies policy" %}
 
 {% block navigation %}{% endblock %}
-
+{% block cookieBanner %}{% endblock %}
 {% block content %}
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
