:lipstick: PIC-1287: PR changes

--- a/server/views/privacy-notice.njk
+++ b/server/views/privacy-notice.njk
@@ -217,8 +217,8 @@
             </p>
             <p class="govuk-body govuk-!-margin-bottom-0">E14 4PU
             </p>
-            <a class="govuk-link" href="mailto:data.compliance@justice.gov.uk">data.compliance@justice.gov.uk
-            </a>
+            <p class="govuk-body"><a class="govuk-link" href="mailto:data.compliance@justice.gov.uk">data.compliance@justice.gov.uk
+                </a></p>
 
             <p class="govuk-body govuk-!-margin-top-5">For more information on how and why your information is processed
                 please
@@ -267,8 +267,8 @@
             </p>
             <p class="govuk-body govuk-!-margin-bottom-0">E14 4PU
             </p>
-            <a class="govuk-link" href="mailto:data.compliance@justice.gov.uk">data.compliance@justice.gov.uk
-            </a>
+            <p class="govuk-body"><a class="govuk-link" href="mailto:data.compliance@justice.gov.uk">data.compliance@justice.gov.uk
+                </a></p>
 
             <p class="govuk-body govuk-!-margin-top-5">You can also contact the Information Commissioner for independent
                 advice
@@ -281,7 +281,7 @@
             <p class="govuk-body govuk-!-margin-bottom-0">Cheshire</p>
             <p class="govuk-body govuk-!-margin-bottom-0">SK9 5AF</p>
             <p class="govuk-body govuk-!-margin-bottom-0">Tel: 0303 123 1113</p>
-            <a class="govuk-link" href="www.ico.org.uk">www.ico.org.uk</a>
+            <p class="govuk-body"><a class="govuk-link" href="https://www.ico.org.uk">www.ico.org.uk</a></p>
 
 
             <h2 class="govuk-heading-m  govuk-!-margin-top-5">Changes to this policy
@@ -295,7 +295,7 @@
                 will take
                 reasonable steps to let you know.</p>
 
-            <p class="pac-secondary-text">Last updated: 8 April 2021</p>
+            <p class="govuk-body pac-secondary-text">Last updated: 8 April 2021</p>
         </div>
     </div>
 {% endblock %}
