:lipstick: PIC-1287: added brackets around url

--- a/server/views/privacy-notice.njk
+++ b/server/views/privacy-notice.njk
@@ -19,9 +19,8 @@
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
             <h1 class="govuk-heading-l">Privacy notice</h1>
-            <p class="govuk-body">Prepare a case for sentence
-                <a href="https://prepare-case-probation.service.justice.gov.uk/"
-                   class="govuk-link govuk-link--no-visited-state">https://prepare-case-probation.service.justice.gov.uk/</a>
+            <p class="govuk-body">Prepare a case for sentence (<a href="https://prepare-case-probation.service.justice.gov.uk/"
+                   class="govuk-link govuk-link--no-visited-state">https://prepare-case-probation.service.justice.gov.uk/</a>)
                 is
                 provided by HMPPS Digital Services, part of the Ministry of Justice (MoJ).
 
