--- a/server/views/cookies-policy.njk
+++ b/server/views/cookies-policy.njk
@@ -6,27 +6,29 @@
 {% block navigation %}{% endblock %}
 {% block cookieBanner %}{% endblock %}
 {% block content %}
+
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-            {% from "govuk/components/notification-banner/macro.njk" import govukNotificationBanner %}
 
-            {% set successBanner %}
-                <p class="govuk-notification-banner__heading">
-                    You’ve set your cookie preferences. <a class="govuk-notification-banner__link" href="#">Go back to the page you were looking at</a>.
-                </p>
-            {% endset %}
+            {% if saveCookieSettings %}
+                {% from "govuk/components/notification-banner/macro.njk" import govukNotificationBanner %}
+                {% set successBanner %}
+                    <p class="govuk-notification-banner__heading">
+                        You’ve set your cookie preferences. <a class="govuk-notification-banner__link" href="#">Go back to the page you were looking at</a>.
+                    </p>
+                {% endset %}
+                {{ govukNotificationBanner({
+                    type: "success",
+                    html: successBanner
+                }) }}
+            {% endif %}
 
-            {{ govukNotificationBanner({
-                type: "success",
-                html: successBanner
-            }) }}
             <h1 class="govuk-heading-l">Cookies</h1>
             <p class="govuk-body">Cookies are small files saved on your phone, tablet or computer when you visit a
                 website.</p>
             <p class="govuk-body">We use cookies to make Prepare a case for sentence work and collect information about
                 how you
                 use our service.</p>
-
 
             <h2 class="govuk-heading-m">Essential cookies</h2>
             <p class="govuk-body">Essential cookies keep your information secure while you use Prepare a case for
@@ -116,7 +118,7 @@
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-two-thirds">
                     <h2 class="govuk-heading-l">Change your cookie settings</h2>
-                    <form action="/form-handler" method="post" novalidate>
+                    <form action="/cookie-preference" method="post" novalidate>
                         {{ govukRadios({
                             idPrefix: "analytics-cookies",
                             name: "analytics-cookies",
@@ -139,8 +141,12 @@
                             ]
                         }) }}
 
-                        {{ govukButton({
-                            text: "Save cookie settings"
+                    {{ govukButton({
+                            text: "Save cookie settings",
+                            type: "submit",
+                            href: "saveCookieSettings",
+                            name: "cookies",
+                            value: "save"
                         }) }}
                     </form>
                 </div>
