Add : before url and . after a parag link.

--- a/server/views/accessibility-statement.njk
+++ b/server/views/accessibility-statement.njk
@@ -18,7 +18,7 @@
         <div class="govuk-grid-column-two-thirds">
             <h1 class="govuk-heading-l">Accessibility statement for Prepare a case for sentence</h1>
             <p class="govuk-body">This page only contains information about the Prepare a case for sentence service,
-                available at
+                available at:
                 <a href="https://prepare-case-probation.service.justice.gov.uk/"
                    class="govuk-link govuk-link--no-visited-state">https://prepare-case-probation.service.justice.gov.uk/</a>
             </p>
@@ -52,7 +52,7 @@
 
 
             <h2 class="govuk-heading-m">Feedback and contact information</h2>
-            <p class="govuk-body">If you have difficulty using this service, email <a
+            <p class="govuk-body">If you have difficulty using this service, email: <a
                         href="mailto:prepareacaseforsentence@digital.justice.gov.uk"
                         class="govuk-link govuk-link--no-visited-state">prepareacaseforsentence@digital.justice.gov.uk</a>
             </p>
@@ -67,7 +67,7 @@
                 problems with this service</h2>
             <p class="govuk-body">We’re always looking to improve the accessibility of this service.</p>
             <p class="govuk-body">If you find any problems that are not listed on this page or think we’re not meeting
-                accessibility requirements, email <a href="mailto:prepareacaseforsentence@digital.justice.gov.uk"
+                accessibility requirements, email: <a href="mailto:prepareacaseforsentence@digital.justice.gov.uk"
                                                      class="govuk-link govuk-link--no-visited-state">prepareacaseforsentence@digital.justice.gov.uk</a>
             </p>
 
@@ -80,7 +80,7 @@
                 regulations’).</p>
             <p class="govuk-body">If you’re not happy with how we respond to your complaint, contact <a
                         href="https://www.equalityadvisoryservice.com/" class="govuk-link govuk-link--no-visited-state">the
-                    Equality Advisory and Support Service (EASS)</a></p>
+                    Equality Advisory and Support Service (EASS).</a></p>
 
 
             <h2 class="govuk-heading-m">Technical information about this service’s accessibility</h2>
