:bug: added margin-top

--- a/server/views/case-summary-record.njk
+++ b/server/views/case-summary-record.njk
@@ -154,9 +154,9 @@
                         <p class="govuk-body govuk-!-margin-bottom-0">Email: {{ offenderManager.staff.email }}</p>
                     {% endif %}
                     {% if offenderManager.staff.telephone %}
-                        <p class="govuk-body govuk-!-margin-bottom-3">Phone: {{ offenderManager.staff.telephone }}</p>
+                        <p class="govuk-body">Phone: {{ offenderManager.staff.telephone }}</p>
                     {% endif %}
-                    <p class="govuk-body govuk-!-margin-bottom-0">Provider: {{ offenderManager.provider }}</p>
+                    <p class="govuk-body govuk-!-margin-bottom-0 govuk-!-margin-top-3">Provider: {{ offenderManager.provider }}</p>
                     <p class="govuk-body govuk-!-margin-bottom-0">LDU: {{ offenderManager.team.district }}</p>
                     <p class="govuk-body govuk-!-margin-bottom-0">Team: {{ offenderManager.team.description }}</p>
                     {% if offenderManager.team.email %}
