:bug: Fix Google Analytics
Signed-off-by: theDustRoom <paul.massey@digital.justice.gov.uk>

--- a/server/views/partials/layout.njk
+++ b/server/views/partials/layout.njk
@@ -32,21 +32,13 @@
         <script src="/assets/accessible-autocomplete.min.js"></script>
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script nonce='{{ params.nonce }}'>(function (w, d, s, l, i) {
-            w[l] = w[l] || []
-            w[l].push({
-              'gtm.start':
-                new Date().getTime(), event: 'gtm.js'
-            })
-            var f = d.getElementsByTagName(s)[0],
-              j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''
-            j.async = true
-            j.src =
-              'https://www.googletagmanager.com/gtm.js?id=' + i + dl
-            var n = d.querySelector('[nonce]')
-            n && j.setAttribute('nonce', n.nonce || n.getAttribute('nonce'))
-            f.parentNode.insertBefore(j, f)
-          })(window, document, 'script', 'dataLayer', '{{ googleAnalyticsKey }}')</script>
+        <script async nonce="{{ params.nonce }}" src="https://www.googletagmanager.com/gtag/js?id={{ googleAnalyticsKey }}"></script>
+        <script nonce="{{ params.nonce }}">
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+          gtag('config', '{{ googleAnalyticsKey }}');
+        </script>
 
     {% endblock %}
 </head>
