💄 Included no visited state on View cookies link
Signed-off-by: theDustRoom <paul.massey@digital.justice.gov.uk>

--- a/server/views/partials/layout.njk
+++ b/server/views/partials/layout.njk
@@ -83,7 +83,8 @@
                             },
                             {
                                 text: "View cookies",
-                                href: "/cookies-policy"
+                                href: "/cookies-policy",
+                                classes: "govuk-link--no-visited-state"
                             }
                         ]
                         }
