💬 Updated link and corrected Cookies page
Signed-off-by: theDustRoom <paul.massey@digital.justice.gov.uk>

--- a/server/views/cookies-policy.njk
+++ b/server/views/cookies-policy.njk
@@ -48,19 +48,19 @@
                 ],
                 rows: [
                     [
-                        { text: "court" },
-                        { text: "Used to remember the court you last looked at" },
-                        { text: "Does not expire" }
-                    ],
-                    [
                         { text: "connect.sid" },
                         { text: "Keeps you logged into the service" },
-                        { text: "2 hours" }
+                        { text: "1 hour" }
                     ],
                     [
-                        { text: "[cookie policy]" },
-                        { text: "[Saves your cookie consent settings]" },
-                        { text: "[1 year]" }
+                        { text: "currentCourt" },
+                        { text: "Used to remember the court you last looked at" },
+                        { text: "1 year" }
+                    ],
+                    [
+                        { text: "analyticsCookies" },
+                        { text: "Saves your analytics cookie consent setting" },
+                        { text: "1 year" }
                     ]
                 ]
             }) }}
