--- a/server/views/partials/layout.njk
+++ b/server/views/partials/layout.njk
@@ -145,7 +145,7 @@
                 },
                 {
                     href: "/cookies-policy",
-                    text: "Cookies policy"
+                    text: "Cookies"
                  },
                  {
                     href: "/privacy-notice",
