🔀 PIC-1284 : 🍪 Cookies banner (#365)
* Add cookies banner

* Reformulate"

* Replace with html flag

* Create cookie policy page

* Add route for cookies policy in the footer

* Add validation banner

* Refactor tables

* Refactor successBanner

* Formatting column page

* Add BDD and test for cookies-policy.feature

* cookie banner logic

* Fix logic banner

* Fix

* Hide success banner

* Cookie page logic

* Add BDD for cookie policy

* fix lint

* Test fix

* Change test to redirect to cookie page

* Change test for cookie routing

* Lint and tests

* Adjust BDD for cookie banner to pass

* Fix timeout for jest to run the route test cookies-preference

* Delete async await

* Cookie-preference endpoint for redirection

* Comment the cookie policy test

* Test cookies policy page

* Change status code to 500

* Correct from previous PR

* Correct from previous PR

* 💄 Included no visited state on View cookies link

Signed-off-by: theDustRoom <paul.massey@digital.justice.gov.uk>

* 💬 Updated link and corrected Cookies page

Signed-off-by: theDustRoom <paul.massey@digital.justice.gov.uk>

* ✅ Updated tests

Signed-off-by: theDustRoom <paul.massey@digital.justice.gov.uk>

Co-authored-by: theDustRoom <paul.massey@digital.justice.gov.uk>

--- a/server/views/partials/layout.njk
+++ b/server/views/partials/layout.njk
@@ -31,6 +31,7 @@
 
         <script src="/assets/accessible-autocomplete.min.js"></script>
 
+        {% if analyticsCookies === 'accept' %}
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async nonce="{{ params.nonce }}" src="https://www.googletagmanager.com/gtag/js?id={{ googleAnalyticsKey }}"></script>
         <script nonce="{{ params.nonce }}">
@@ -39,7 +40,7 @@
           gtag('js', new Date());
           gtag('config', '{{ googleAnalyticsKey }}');
         </script>
-
+        {% endif %}
     {% endblock %}
 </head>
 <body class="govuk-template__body">
@@ -50,6 +51,49 @@
 
 <a href="#main-content" class="govuk-skip-link">Skip to main content</a>
 
+{% block bodyStart %}
+    {% block cookieBanner %}
+        {% if not analyticsCookies %}
+            {% from "govuk/components/cookie-banner/macro.njk" import govukCookieBanner %}
+
+            {% set html %}
+                <p>We use some essential cookies to make this service work.</p>
+                <p>We’d also like to use analytics cookies so we can understand how you use the service and make
+                    improvements.</p>
+            {% endset %}
+            <form action="/cookie-preference" method="post">
+                {{ govukCookieBanner({
+                    ariaLabel: "Cookies on Prepare a case for sentence",
+                    messages: [
+                        {
+                            headingText: "Cookies on Prepare a case for sentence",
+                            html: html,
+                            actions: [
+                            {
+                                text: "Accept analytics cookies",
+                                type: "submit",
+                                name: "cookies",
+                                value: "accept"
+                            },
+                            {
+                                text: "Reject analytics cookies",
+                                type: "submit",
+                                name: "cookies",
+                                value: "reject"
+                            },
+                            {
+                                text: "View cookies",
+                                href: "/cookies-policy",
+                                classes: "govuk-link--no-visited-state"
+                            }
+                        ]
+                        }
+                    ]
+                }) }}
+            </form>
+        {% endif %}
+    {% endblock %}
+{% endblock %}
 {% block header %}
     {% include "./header.html" %}
 {% endblock %}
@@ -100,6 +144,10 @@
                     text: "Accessibility statement"
                 },
                 {
+                    href: "/cookies-policy",
+                    text: "Cookies"
+                 },
+                 {
                     href: "/privacy-notice",
                     text: "Privacy"
                 }
