Cookie banner appearing on user guide, accessibility statement and privacy notice after preferences set

--- a/server/views/accessibility-statement.njk
+++ b/server/views/accessibility-statement.njk
@@ -4,7 +4,7 @@
 {% set title = "Accessibility statement" %}
 
 {% block navigation %}{% endblock %}
-
+{% block cookieBanner %}{% endblock %}
 {% block backlink %}
     {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
         {{ govukBackLink({
