--- a/server/views/user-guide.njk
+++ b/server/views/user-guide.njk
@@ -4,7 +4,7 @@
 {% set title = "User guide" %}
 
 {% block navigation %}{% endblock %}
-
+{% block cookieBanner %}{% endblock %}
 {% block content %}
   <div class="govuk-grid-row">
     <nav class="govuk-grid-column-one-quarter pac-hide--mobile" aria-label="Side navigation">
