--- a/server/views/privacy-notice.njk
+++ b/server/views/privacy-notice.njk
@@ -4,7 +4,7 @@
 {% set title = "Privacy notice" %}
 
 {% block navigation %}{% endblock %}
-
+{% block cookieBanner %}{% endblock %}
 {% block backlink %}
     {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
 
