--- a/server/views/case-list.njk
+++ b/server/views/case-list.njk
@@ -56,6 +56,16 @@
 
 {% endfor %}
 
+{% set isSunday = moment().day() === 0 %}
+{% set dateFormat = 'dddd D MMMM' %}
+{% set timeStampDateFormat = 'ddd D MMM' %}
+{% set useTodayDate = moment() if not isSunday else moment().add(1, 'days') %}
+{% set currentDate = moment(params.date, 'YYYY-MM-DD') %}
+{% set today = moment().format('YYYY-MM-DD') %}
+{% set lastestSnapshotTime = moment(params.snapshot).format('hh:mm') %}
+{% set tomorrow = moment().add(1, 'days').format('YYYY-MM-DD') %}
+{% set withinDateRange = currentDate.isBetween(moment(), params.addBusinessDays(moment(), params.totalDays - 1), 'day', '[]') %}
+
 {% set maxPagesDisplay = 5 %}
 {% set currentPage = params.page %}
 {% set startNum = currentPage - ((maxPagesDisplay - 1) / 2) %}
@@ -77,7 +87,7 @@
 {% for i in range(startNum, endNum + 1) -%}
     {{ pageItems.push({
         text: i,
-        href: '?page=' + i,
+        href: '/' + params.courtCode + '/cases/' + today + '?page=' + i,
         selected: currentPage === i
     }) }}
 {%- endfor %}
@@ -87,7 +97,7 @@
 {% else %}
     {% set previousLink = {
         text: 'Previous',
-        href: '?page=' + (currentPage - 1)
+        href: '/' + params.courtCode + '/cases/' + today + '?page=' + (currentPage - 1)
     } %}
 {% endif %}
 
@@ -96,19 +106,9 @@
 {% else %}
     {% set nextLink = {
         text: 'Next',
-        href: '?page=' + (currentPage + 1)
+        href: '/' + params.courtCode + '/cases/' + today + '?page=' + (currentPage + 1)
     } %}
 {% endif %}
-
-{% set isSunday = moment().day() === 0 %}
-{% set dateFormat = 'dddd D MMMM' %}
-{% set timeStampDateFormat = 'ddd D MMM' %}
-{% set useTodayDate = moment() if not isSunday else moment().add(1, 'days') %}
-{% set currentDate = moment(params.date, 'YYYY-MM-DD') %}
-{% set today = moment().format('YYYY-MM-DD') %}
-{% set lastestSnapshotTime = moment(params.snapshot).format('hh:mm') %}
-{% set tomorrow = moment().add(1, 'days').format('YYYY-MM-DD') %}
-{% set withinDateRange = currentDate.isBetween(moment(), params.addBusinessDays(moment(), params.totalDays - 1), 'day', '[]') %}
 
 {% if params.subsection === '' %}
     {% set title = "Case list" %}
