:fire: Remove cookie banner from error page
Signed-off-by: theDustRoom <paul.massey@digital.justice.gov.uk>

--- a/server/views/error.njk
+++ b/server/views/error.njk
@@ -1,6 +1,7 @@
 {% extends "partials/layout.njk" %}
 
 {% block navigation %}{% endblock %}
+{% block cookieBanner %}{% endblock %}
 
 {% if status === 401  %}
   {% set title = "Authorisation Error" %}
