:sparkles: Added Go to today link on out of date range case list pages
:white_check_mark: Updated tests
:lipstick: Added no underline override
:coffin: Removed commented BDD tests

Signed-off-by: theDustRoom <paul.massey@digital.justice.gov.uk>

--- a/public/stylesheets/app/_overrides.scss
+++ b/public/stylesheets/app/_overrides.scss
@@ -2,6 +2,10 @@
   @extend .govuk-link--no-visited-state;
 }
 
+.pac-\!-no-underline {
+  text-decoration: none;
+}
+
 .govuk-table.pac-table--no-borders {
   th, td {
     border: 0;
