Content change: User guide on selecting courts

--- a/server/views/user-guide.njk
+++ b/server/views/user-guide.njk
@@ -135,11 +135,12 @@
       </p>
       <p class="govuk-body">Log in with your NDelius username and password.</p>
 
-      <h3 class="govuk-heading-s" id="ug-selecting-a-court">Selecting a court</h3>
-      <p class="govuk-body">When you sign in to the service, you will see a list of courts you can view.</p>
-      <p class="govuk-body">Select a court to see case lists in that court.</p>
-      <p class="govuk-body">If you need to view a different court, click 'Change Court' at the top of the page to return
-        to the list of courts.</p>
+      <h3 class="govuk-heading-s" id="ug-selecting-a-court">Selecting the courts you work in</h3>
+      <p class="govuk-body">When you sign in to the service for the first time, you will be asked to add the courts you work in.</p>
+      <p class="govuk-body">Type in the name of a court and add it. When you have added all of the courts you work in, save the list.</p>
+      <p class="govuk-body">The list of courts will appear on 'My courts'.  Select a court to view case lists.</p>
+      <p class="govuk-body">If you need to view a different court, go to 'My courts' at the top of the page.</p>
+      <p class="govuk-body">To add or remove courts from 'My courts', go to 'Edit my courts'.</p>
 
       <h2 class="govuk-heading-m" id="ug-viewing-a-case-list">Viewing a case list</h2>
 
