✨ Case summary pre-sentence record support
🤡 Updated mocks for consistency
✅ Updated BDD tests to check sub-nav is not shown on relevant case summary screens

Signed-off-by: theDustRoom <paul.massey@digital.justice.gov.uk>

--- a/server/views/partials/case-details.njk
+++ b/server/views/partials/case-details.njk
@@ -4,7 +4,7 @@
 
 {% set subNavItems = [] %}
 
-{% if data.crn %}
+{% if data.crn and data.probationStatus | string | lower !== "pre-sentence record" %}
     {{ subNavItems.push({
         text: 'Case summary',
         href: '/' + params.courtCode + '/case/' + data.caseNo + '/summary',
@@ -21,8 +21,8 @@
         href: '/' + params.courtCode + '/case/' + data.caseNo + '/risk',
         active: title === 'Risk register'
     }) }}
-
 {% endif %}
+
 {% set crn = [] %}
 {{ crn.push(data.crn) if data.crn }}
 
@@ -75,7 +75,7 @@
     {{ mojSubNavigation({
         label: 'Sub navigation',
         items: subNavItems
-    }) if not hideSubnav }}
+    }) if subNavItems | length and not hideSubnav }}
 
     {% block caseContent %}{% endblock %}
 
