✨ Included feedback banner
✅ Updated BDD tests

Signed-off-by: theDustRoom <paul.massey@digital.justice.gov.uk>

--- a/public/stylesheets/app/_overrides.scss
+++ b/public/stylesheets/app/_overrides.scss
@@ -6,6 +6,10 @@
   text-decoration: none;
 }
 
+.govuk-phase-banner {
+  border: none;
+}
+
 .govuk-table.pac-table--no-borders {
   th, td {
     border: 0;
