--- a/server/views/partials/layout.njk
+++ b/server/views/partials/layout.njk
@@ -94,8 +94,21 @@
         {% endif %}
     {% endblock %}
 {% endblock %}
+
 {% block header %}
     {% include "./header.html" %}
+{% endblock %}
+
+{% block phaseBanner %}
+  <div class="govuk-width-container">
+    {% from "govuk/components/phase-banner/macro.njk" import govukPhaseBanner %}
+    {{ govukPhaseBanner({
+      tag: {
+        text: "Feedback"
+      },
+      html: '<a class="govuk-link govuk-link--no-visited-state" href="https://docs.google.com/forms/d/e/1FAIpQLScluoDOXsJ_XBO3iOp283JE9mN3vTVNgEJcPNDHQQvU-dbHuA/viewform?usp=sf_link" target="_blank">Give us your feedback</a> to help us improve this service.'
+    }) }}
+  </div>
 {% endblock %}
 
 {% block navigation %}
